// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ws reducer default 1`] = `
Object {
  "userOrders": Array [],
}
`;

exports[`ws reducer userOrder 1`] = `
Object {
  "userOrder": Array [
    Object {
      "userOrder": "test",
    },
  ],
  "userOrders": Array [],
}
`;
